cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_105.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_cfb64.c:55: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_cfb64.c:55:17: Write of unused value
53.                   n2l(iv, v0);
54.                   ti[0] = v0;
55.                   n2l(iv, v1);
                      ^
56.                   ti[1] = v1;
57.                   CAST_encrypt((CAST_LONG *)ti, schedule);
